# vector_db_benchmark

./: .env.example  .gitignore  Makefile  README.md  app.py  config.py  main.py  pyproject.toml  test_gemini.py  빌드순서.txt
benchmark/: __init__.py  comparison.py
embedder/: __init__.py  embedding_router.py  upstage_embedder.py
ingestion/: __init__.py  ai_config_advisor.py  chunker.py  doc_ingestor.py  doc_registry.py  excel_converter.py  index_ingestor.py  index_registry.py  ingest_pipeline.py  ingestion_config.py  pdf_loader.py  pkg_installer.py  strategy_info.py
ingestion/loaders/: __init__.py  base_loader.py  csv_loader.py  docx_loader.py  html_loader.py  md_loader.py  pdf_loader.py  txt_loader.py
llm/: __init__.py  base_provider.py  claude_provider.py  company_provider.py  gemini_provider.py  openai_provider.py  upstage_provider.py
pages/: 1_Chatbot.py
query/: __init__.py  queries.py  query_runner.py
rag/: __init__.py  nodes.py  pipeline.py
scripts/: start_opensearch.sh  stop_opensearch.sh
search/: router.py
stores/: __init__.py  base_store.py  opensearch_store.py  qdrant_store.py
